--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,18 +22,20 @@ const makeTitle = title
   : "Codingly — Blog for Developers";
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+
     <SEO
       title={makeTitle}
       description={desc ||
         "Codingly is a blog for developers. We write about web development, programming, and software engineering."}
       canonical={canonicalURL}
+      keywords={["blog", "web development", "coding", "programming"]}
       twitter={{
         creator: "@stekatag",
         site: "@stekatag",
