--- a/src/components/categoryposts.astro
+++ b/src/components/categoryposts.astro
@@ -21,7 +21,8 @@ const postsList = latestPosts
         <Link
           href={`/category/${category?.slug}`}
           style="underline"
-          size="unset">
+          size="unset"
+          title={`View all posts in ${category?.title}`}>
           See All
         </Link>
       </section>
