--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -6,7 +6,13 @@ import Themeswitch from "./themeswitch.astro";
 <Container class="mt-10 border-t border-gray-100 dark:border-gray-800">
   <footer class="flex flex-col items-center">
     <div class="text-sm text-center">
-      Copyright © {new Date().getFullYear()} Stefan Gogov. All rights reserved.
+      Copyright © {new Date().getFullYear()}
+      <a
+        href="https://sgogov.dev/"
+        target="_blank"
+        title="Stefan Gogov"
+        class="hover:underline">Stefan Gogov</a
+      >. All rights reserved.
     </div>
 
     <div class="flex items-center justify-between mt-2">
