--- a/src/components/pagination.astro
+++ b/src/components/pagination.astro
@@ -7,14 +7,18 @@ const { prevUrl, nextUrl } = Astro.props;
 <nav class="flex justify-center gap-4 mt-10">
   {
     prevUrl && (
-      <Link href={prevUrl} size="md" style="outline">
+      <Link
+        href={prevUrl}
+        size="md"
+        style="outline"
+        title="Go to previous page">
         ← Previous
       </Link>
     )
   }
   {
     nextUrl && (
-      <Link href={nextUrl} size="md" style="outline">
+      <Link href={nextUrl} size="md" style="outline" title="Go to next page">
         Next →
       </Link>
     )
