--- a/src/components/themeswitch.astro
+++ b/src/components/themeswitch.astro
@@ -1,12 +1,12 @@
 ---
-import { Icon } from 'astro-icon/components';
+import { Icon } from "astro-icon/components";
 import { ThemeSwitch } from "astro-color-scheme";
 ---
 
 <ThemeSwitch strategy="select" defaultTheme="dark">
   <div class="inline-flex items-center">
     <Icon class="w-4 h-4 mr-2" name="heroicons-outline:sun" />
-    <select name="themeSwitch" id="themeSwitch">
+    <select name="themeSwitch" id="themeSwitch" title="Change theme">
       <option value="system">System</option>
       <option value="dark">Dark</option>
       <option value="light">Light</option>
