fix: update Tailwind CSS configuration and component styles for improved theming and accessibility

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -3,15 +3,15 @@ import Container from "./container.astro";
 import Themeswitch from "./themeswitch.astro";
 ---
 
-<Container class="mt-10 border-t border-gray-100 dark:border-gray-800">
+<Container class="mt-10 border-t border-zinc-100 dark:border-zinc-800">
   <footer class="flex flex-col items-center">
-    <div class="text-sm text-center">
+    <div class="text-sm text-zinc-600 dark:text-zinc-400 text-center">
       Copyright © {new Date().getFullYear()}
       <a
         href="https://sgogov.dev/"
         target="_blank"
         title="Stefan Gogov"
-        class="hover:underline">Stefan Gogov</a
+        class="text-zinc-800 dark:text-zinc-300 hover:underline">Stefan Gogov</a
       >. All rights reserved.
     </div>
 
