--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -25,13 +25,13 @@ const sizes = {
 
 const styles = {
   outline:
-    "bg-white border-2 border-black hover:shadow-xl text-black dark:bg-transparent dark:border-white dark:text-white dark:hover:bg-gray-800",
+    "bg-primary border-2 border-brand-primary dark:border-dark hover:shadow-xl text-brand-primary dark:bg-transparent dark:border-white dark:text-white dark:hover:bg-zinc-800",
   primary:
-    "bg-black text-white hover:bg-gray-800 hover:shadow-xl  border-2 border-transparent dark:bg-white dark:text-black dark:hover:bg-gray-200",
-  inverted: "bg-white text-black hover:shadow-xl  border-2 border-transparent",
+    "bg-brand-primary text-white hover:bg-zinc-800 hover:shadow-xl  border-2 border-transparent dark:bg-white dark:text-brand-primary dark:hover:bg-zinc-200",
+  inverted: "bg-white text-dark hover:shadow-xl  border-2 border-transparent",
   underline: "nav-link after:dark:bg-purple-500",
   muted:
-    "bg-gray-100 hover:bg-gray-200 hover:shadow-xl  border-2 border-transparent",
+    "bg-zinc-100 hover:bg-zinc-200 hover:shadow-xl  border-2 border-transparent",
 };
 ---
 
