--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -112,7 +112,7 @@ const schema = frontmatter
 
     <script type="application/ld+json" set:html={JSON.stringify(schema)} />
   </head>
-  <body>
+  <body class="bg-primary dark:bg-brand-primary">
     <Navbar />
     <slot />
     <Footer />
@@ -121,6 +121,27 @@ const schema = frontmatter
       /* https://css-tricks.com/almanac/properties/c/content-visibility/ */
       img {
         content-visibility: auto;
+      }
+
+      :root {
+        color-scheme: light dark;
+      }
+
+      body {
+        @apply transition-colors duration-200 text-gray-600 dark:text-gray-400;
+      }
+
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        @apply text-gray-900 dark:text-white;
+      }
+
+      ::selection {
+        @apply bg-blue-500 text-white dark:bg-purple-500;
       }
     </style>
     <script>
