--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -30,7 +30,7 @@ import { Image } from "astro:assets";
 
       <div class="max-w-lg">
         <p
-          class="mb-5 text-lg text-gray-500 dark:text-gray-400 md:px-10 lg:px-0">
+          class="mb-5 text-lg text-zinc-500 dark:text-zinc-400 md:px-10 lg:px-0">
           My name is Stefan Gogov, and I'm from Bulgaria. I live in Asenovgrad
           which is a small town in Plovdiv Province. Programming is my true
           passion and I cannot imagine life not doing it. I really enjoy solving
@@ -39,7 +39,7 @@ import { Image } from "astro:assets";
           beautiful.
         </p>
 
-        <p class="text-lg text-gray-500 dark:text-gray-400 md:px-10 lg:px-0">
+        <p class="text-lg text-zinc-500 dark:text-zinc-400 md:px-10 lg:px-0">
           Besides that, by creating this blog, I'm going to share all of my
           experiences that would be helpful to you
         </p>
@@ -47,7 +47,7 @@ import { Image } from "astro:assets";
     </div>
 
     <div class="mx-auto max-w-xl text-center mt-14">
-      <p class="text-lg leading-relaxed text-gray-500">
+      <p class="text-lg leading-relaxed text-zinc-600 dark:text-zinc-300">
         Need assistance or collaboration? Reach out and get in touch! Together,
         we can achieve greatness.
       </p>
