--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,32 +16,32 @@ import Pagetitle from "@components/pagetitle.astro";
     <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
       <div>
         <p
-          class="text-lg leading-relaxed text-gray-500 mt-3 dark:text-gray-300">
+          class="text-lg leading-relaxed text-zinc-500 mt-3 dark:text-zinc-300">
           Have something to say? I'm always happy to hear from you. Just fill
           out the form below and I'll get back to you as soon as possible.
         </p>
         <div class="mt-5">
           <div
-            class="flex items-center mt-2 space-x-2 text-gray-600 dark:text-gray-400">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" /><a
+            class="flex items-center mt-2 space-x-2 text-zinc-600 dark:text-zinc-400">
+            <Icon class="text-zinc-400 w-4 h-4" name="uil:envelope" /><a
               href="mailto:stefangogov@proton.me">stefangogov@proton.me</a
             >
           </div>
           <div
-            class="flex items-center mt-2 space-x-2 text-gray-600 dark:text-gray-400">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:globe" /><a
+            class="flex items-center mt-2 space-x-2 text-zinc-600 dark:text-zinc-400">
+            <Icon class="text-zinc-400 w-4 h-4" name="uil:globe" /><a
               href="https://sgogov.com/">Photography Portfolio</a
             >
           </div>
           <div
-            class="flex items-center mt-2 space-x-2 text-gray-600 dark:text-gray-400">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:github" /><a
+            class="flex items-center mt-2 space-x-2 text-zinc-600 dark:text-zinc-400">
+            <Icon class="text-zinc-400 w-4 h-4" name="uil:github" /><a
               href="https://github.com/stekatag">stekatag</a
             >
           </div>
           <div
-            class="flex items-center mt-2 space-x-2 text-gray-600 dark:text-gray-400">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:linkedin" /><a
+            class="flex items-center mt-2 space-x-2 text-zinc-600 dark:text-zinc-400">
+            <Icon class="text-zinc-400 w-4 h-4" name="uil:linkedin" /><a
               href="https://www.linkedin.com/in/stefan-gogov/">Stefan Gogov</a
             >
           </div>
