--- a/src/components/authorcard.astro
+++ b/src/components/authorcard.astro
@@ -5,7 +5,7 @@ const { author } = Astro.props;
 ---
 
 <div
-  class="px-8 py-8 mt-3 text-gray-500 rounded-2xl bg-gray-50 dark:bg-gray-900 dark:text-gray-400">
+  class="px-8 py-8 mt-3 text-zinc-500 rounded-2xl bg-zinc-200 dark:bg-zinc-950 dark:text-zinc-400">
   <div class="flex flex-wrap items-start gap-3 sm:flex-nowrap sm:gap-6">
     <div class="relative flex-shrink-0 w-24 h-24 mt-1">
       {
@@ -24,7 +24,7 @@ const { author } = Astro.props;
     </div>
     <div>
       <div>
-        <p class="text-lg font-medium text-gray-800 dark:text-gray-300">
+        <p class="text-lg font-medium text-zinc-800 dark:text-zinc-300">
           About {author.name}
         </p>
       </div>
