--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -22,7 +22,8 @@ const ACCESS_KEY = "6ac2bdf4-5ff7-4216-9520-f65480e55ce6";
       type="text"
       placeholder="Full Name"
       required
-      class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100 dark:placeholder-gray-400 dark:border-gray-700 dark:bg-gray-900 dark:text-gray-100"
+      class="w-full px-4 py-3 border-2 placeholder:text-zinc-400 rounded-md outline-none focus:ring-4 border-zinc-300 focus:border-zinc-600 ring-zinc-100 bg-white text-zinc-800
+      dark:placeholder-zinc-400 dark:border-zinc-700 dark:bg-zinc-900 dark:text-zinc-100"
       name="name"
     />
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
@@ -36,7 +37,8 @@ const ACCESS_KEY = "6ac2bdf4-5ff7-4216-9520-f65480e55ce6";
       placeholder="Email Address"
       name="email"
       required
-      class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100 dark:placeholder-gray-400 dark:border-gray-700 dark:bg-gray-900 dark:text-gray-100"
+      class="w-full px-4 py-3 border-2 placeholder:text-zinc-400 rounded-md outline-none focus:ring-4 border-zinc-300 focus:border-zinc-600 ring-zinc-100 bg-white text-zinc-800
+      dark:placeholder-zinc-400 dark:border-zinc-700 dark:bg-zinc-900 dark:text-zinc-100"
     />
     <div class="empty-feedback text-red-400 text-sm mt-1">
       Please provide your email address.
@@ -50,7 +52,8 @@ const ACCESS_KEY = "6ac2bdf4-5ff7-4216-9520-f65480e55ce6";
       name="message"
       required
       placeholder="Your Message"
-      class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none h-36 focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100 dark:placeholder-gray-400 dark:border-gray-700 dark:bg-gray-900 dark:text-gray-100"
+      class="w-full px-4 py-3 border-2 placeholder:text-zinc-400 rounded-md outline-none h-36 focus:ring-4 border-zinc-300 focus:border-zinc-600 ring-zinc-100 bg-white text-zinc-800
+      dark:placeholder-zinc-400 dark:border-zinc-700 dark:bg-zinc-900 dark:text-zinc-100"
     ></textarea>
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
       Please enter your message.
@@ -81,53 +84,53 @@ const ACCESS_KEY = "6ac2bdf4-5ff7-4216-9520-f65480e55ce6";
 </style>
 
 <script is:inline>
-const form = document.getElementById("form");
-const result = document.getElementById("result");
+  const form = document.getElementById("form");
+  const result = document.getElementById("result");
 
-form.addEventListener("submit", function (e) {
-  e.preventDefault();
-  form.classList.add("was-validated");
+  form.addEventListener("submit", function (e) {
+    e.preventDefault();
+    form.classList.add("was-validated");
 
-  if (!form.checkValidity()) {
-    form.querySelectorAll(":invalid")[0].focus();
-    return;
-  }
+    if (!form.checkValidity()) {
+      form.querySelectorAll(":invalid")[0].focus();
+      return;
+    }
 
-  const formData = new FormData(form);
-  const object = Object.fromEntries(formData);
-  const json = JSON.stringify(object);
+    const formData = new FormData(form);
+    const object = Object.fromEntries(formData);
+    const json = JSON.stringify(object);
 
-  result.innerHTML = "Sending...";
+    result.innerHTML = "Sending...";
 
-  fetch("https://api.web3forms.com/submit", {
-    method: "POST",
-    headers: {
-      "Content-Type": "application/json",
-      Accept: "application/json",
-    },
-    body: json,
-  })
-    .then(async (response) => {
-      let json = await response.json();
-      if (response.status == 200) {
-        result.classList.add("text-green-500");
-        result.innerHTML = json.message;
-      } else {
-        console.log(response);
-        result.classList.add("text-red-500");
-        result.innerHTML = json.message;
-      }
+    fetch("https://api.web3forms.com/submit", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+        Accept: "application/json",
+      },
+      body: json,
     })
-    .catch((error) => {
-      console.log(error);
-      result.innerHTML = "Something went wrong!";
-    })
-    .then(function () {
-      form.reset();
-      form.classList.remove("was-validated");
-      setTimeout(() => {
-        result.style.display = "none";
-      }, 5000);
-    });
-});
+      .then(async (response) => {
+        let json = await response.json();
+        if (response.status == 200) {
+          result.classList.add("text-green-500");
+          result.innerHTML = json.message;
+        } else {
+          console.log(response);
+          result.classList.add("text-red-500");
+          result.innerHTML = json.message;
+        }
+      })
+      .catch((error) => {
+        console.log(error);
+        result.innerHTML = "Something went wrong!";
+      })
+      .then(function () {
+        form.reset();
+        form.classList.remove("was-validated");
+        setTimeout(() => {
+          result.style.display = "none";
+        }, 5000);
+      });
+  });
 </script>
