--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -96,7 +96,7 @@ const mobilemenu: Menu[] = [...leftmenu, ...rightmenu];
         <button
           id="menu"
           aria-label="Toggle Menu"
-          class="px-2 py-1 ml-auto text-gray-500 rounded-md md:hidden focus:text-blue-500 dark:focus:text-purple-500 focus:outline-none dark:text-gray-300">
+          class="px-2 py-1 ml-auto text-zinc-500 rounded-md md:hidden focus:text-blue-500 dark:focus:text-purple-500 focus:outline-none dark:text-zinc-300">
           <svg
             class="w-6 h-6 fill-current"
             xmlns="http://www.w3.org/2000/svg"
@@ -145,7 +145,7 @@ const mobilemenu: Menu[] = [...leftmenu, ...rightmenu];
             <li class="px-5 py-3 ">
               <a
                 href={item.href}
-                class=" font-medium text-gray-600 dark:text-gray-400 hover:text-blue-500 dark:hover:text-purple-500"
+                class=" font-medium text-zinc-600 dark:text-zinc-400 hover:text-blue-500 dark:hover:text-purple-500"
                 target={item.external ? "_blank" : ""}
                 rel={item.external ? "noopener" : ""}
                 title={item.label}>
