--- a/src/components/ui/button.astro
+++ b/src/components/ui/button.astro
@@ -21,9 +21,10 @@ const sizes = {
 };
 
 const styles = {
-  outline: "border-2 border-black hover:bg-black text-black hover:text-white",
+  outline:
+    "border-2 border-brand-primary hover:bg-brand-primary text-brand-primary hover:text-white",
   primary:
-    "bg-black text-white hover:bg-gray-900  border-2 border-transparent dark:bg-white dark:text-black dark:hover:bg-gray-300",
+    "bg-brand-primary text-white hover:bg-zinc-800  border-2 border-transparent dark:bg-white dark:text-brand-primary dark:hover:bg-gray-300",
 };
 ---
 
