--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -6,7 +6,7 @@ import authors from "@data/authors.json";
 import categories from "@data/categories.json";
 import Layout from "@layouts/Layout.astro";
 import { getFormattedDate } from "@utils/all";
-import { CollectionEntry, getCollection } from "astro:content";
+import { type CollectionEntry, getCollection } from "astro:content";
 
 import type { Props as Author } from "@data/author-types";
 import type { Props as Category } from "@data/category-types";
@@ -54,7 +54,7 @@ const category = categories.find(
         {post.data.title}
       </h1>
 
-      <div class="flex justify-center mt-3 space-x-3 text-gray-500">
+      <div class="flex justify-center mt-3 space-x-3 text-zinc-500">
         <div class="flex items-center gap-3">
           <div class="relative flex-shrink-0 w-10 h-10">
             {
@@ -76,13 +76,13 @@ const category = categories.find(
             <a
               href={`/author/${author.slug}`}
               title={`View all posts by ${author.name}`}>
-              <p class="text-gray-800 dark:text-gray-400">
+              <p class="text-zinc-800 dark:text-zinc-400 hover:underline">
                 {author.name}
               </p>
             </a>
             <div class="flex items-center space-x-2 text-sm">
               <time
-                class="text-gray-500 dark:text-gray-400"
+                class="text-zinc-500 dark:text-zinc-400"
                 datetime={post.data.publishDate}>
                 {getFormattedDate(post.data.publishDate)}
               </time>
@@ -123,7 +123,7 @@ const category = categories.find(
         <div class="flex flex-wrap items-center w-full gap-3 md:w-auto">
           {
             post.data.tags.map((tag) => (
-              <span class="text-sm text-gray-500">#{tag}</span>
+              <span class="text-sm text-zinc-500">#{tag}</span>
             ))
           }
         </div>
@@ -132,7 +132,7 @@ const category = categories.find(
       <div class="flex justify-center mt-7 mb-7">
         <a
           href="/blog"
-          class="px-5 py-3 text-sm text-blue-600 transition rounded-md dark:text-purple-500 bg-purple-50 hover:bg-blue-200 dark:hover:bg-purple-200"
+          class="px-5 py-3 text-sm text-blue-600 transition rounded-md dark:text-purple-500 dark:bg-purple-50 bg-blue-50 hover:bg-blue-200 dark:hover:bg-purple-200"
           title="View all posts">
           ← View all posts
         </a>
