--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import { latestPosts } from "@utils/content";
 import profileImage from "/public/authors/stefan.webp";
 import categories from "@data/categories.json";
 import { Image } from "astro:assets";
+import { Icon } from "astro-icon/components";
 ---
 
 <Layout
@@ -24,14 +25,37 @@ import { Image } from "astro:assets";
             Hi, I'm Stefan.
           </h1>
           <p
-            class="text-lg text-gray-500 dark:text-gray-400 text-center md:px-10 lg:text-left lg:px-0">
+            class="text-lg text-zinc-500 dark:text-zinc-400 text-center md:px-10 lg:text-left lg:px-0">
             Welcome to my blog. I'm a web developer enthusiast and photographer.
           </p>
           <nav
             class="flex flex-wrap mt-8 space-x-3"
             aria-label="Call to action Navigation">
-            <Link href="/blog">Github</Link>
-            <Link href="/about" style="outline">About me</Link>
+            <Link href="/blog" class="flex items-center space-x-1.5">
+              <Icon name="mdi:post" class="dark:text-zinc-800 text-zinc-100" />
+              <span>Blog</span>
+            </Link>
+            <Link
+              href="/about"
+              style="outline"
+              class="flex items-center space-x-1">
+              <Icon
+                name="mdi:account"
+                class="dark:text-zinc-100 text-zinc-800"
+              />
+              <span>About</span>
+            </Link>
+            <Link
+              href="https://github.com/stekatag"
+              target="_blank"
+              style="outline"
+              class="flex items-center space-x-1.5">
+              <Icon
+                name="mdi:github"
+                class="dark:text-zinc-100 text-zinc-800"
+              />
+              <span>Github</span>
+            </Link>
           </nav>
         </div>
 
@@ -75,7 +99,7 @@ import { Image } from "astro:assets";
         <div class="flex justify-center mt-7 mb-7">
           <a
             href="/blog"
-            class="px-5 py-3 text-sm text-blue-600 transition rounded-md dark:text-purple-500 bg-purple-50 hover:bg-blue-200 dark:hover:bg-purple-200"
+            class="px-5 py-3 text-sm text-blue-600 transition rounded-md dark:text-purple-500 dark:bg-purple-50 bg-blue-50 hover:bg-blue-200 dark:hover:bg-purple-200"
             title="View all posts">
             ← View all posts
           </a>
