--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -73,6 +73,7 @@ const schema = frontmatter
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <meta name="generator" content={Astro.generator} />
     <meta
       name="keywords"
