--- a/src/components/themeswitch.astro
+++ b/src/components/themeswitch.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon/components";
 import { ThemeSwitch } from "astro-color-scheme";
 ---
 
-<ThemeSwitch strategy="select" defaultTheme="dark">
+<ThemeSwitch strategy="select" defaultTheme="system">
   <div class="inline-flex items-center">
     <Icon class="w-4 h-4 mr-2" name="heroicons-outline:sun" />
     <select
