--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -98,7 +98,7 @@ const category = categories.find(
   </Container>
 
   <div
-    class="relative z-0 max-w-screen-lg mx-auto overflow-hidden lg:rounded-lg aspect-video">
+    class="relative z-0 max-w-screen-lg mx-auto overflow-hidden lg:rounded-lg">
     {
       post.data.image && (
         <Image
